--- a/en/CV_en.tex
+++ b/en/CV_en.tex
@@ -2,7 +2,7 @@
 \documentclass[11pt, a4paper]{moderncv}
 
 \usepackage[utf8]{inputenc}
-\usepackage[scale=0.78]{geometry}
+\usepackage[scale=0.80]{geometry}
 
 \moderncvstyle{classic}
 \moderncvcolor{blue}
@@ -22,7 +22,7 @@
 \mobile{+33 6 88 61 25 80}
 \email{adrienchardon@mailoo.org}
 \homepage{www.github.com/Nodraak}
-\extrainfo{Born January 30, 1995}
+\extrainfo{Born on January 30, 1995} % no birthday if us
 
 
 % Content
@@ -49,24 +49,23 @@
 \mysection{Computer science skills}
 %------------------------------------------------------------------------------
 
-\subsection{Software development}
-\mycvitemwithcomment{Programming skills}{C, Python}{}
-\mycvitemwithcomment{Web - Frontend}{HTML, CSS (framework Foundation), Javascript (JQuery)}{}
-\mycvitemwithcomment{}{Basic skills : databases, ASM x86, PHP}{}
-\mycvitemwithcomment{UNIX ecosystem}{Bash, vim, git, ...}{}
-
-\subsection{Office tools}
+\mycvitemwithcomment{Programming skills}{C}{Low level (sockets, threads), SDL, ...}
+\mycvitemwithcomment{}{Python}{Django, Scipy, requests, ...}
+\mycvitemwithcomment{}{x86 assembly}{Reverse engineering and operating systems study.}
+\mycvitemwithcomment{Web - Backend}{Python (Django framework)}{}
+\mycvitemwithcomment{Web - Frontend}{HTML, CSS/SCSS (Foundation framework), Javascript (JQuery)}{}
+\mycvitemwithcomment{UNIX ecosystem}{Vim, git, bash scripts, ...}{}
+\mycvitemwithcomment{System administration}{Linux (Debian / Ubuntu)}{}
 \mycvitemwithcomment{Word processing}{\LaTeX}{}
-\cvitem{Operating systems}{Linux (Debian), Windows}
-
 
 \mysection{Job experiences}
 %------------------------------------------------------------------------------
 
+\mycvitemwithcomment{Since sept. 2014}{Administration of iTeam's servers}{(Association promoting free softwares at ECE Paris)}
+\mycvitemwithcomment{Autumn 2015}{Student job at Aalborg university (Denmark)}{Development with an Oculus Rift}
 \mycvitemwithcomment{Summer 2015}{Internship at Findspire (Paris)}{}
-\mycvitemwithcomment{Sept. 2014 - Today}{Administration of the iTeam's servers}{(Association promoting free softwares at ECE Paris)}
-\mycvitemwithcomment{Summer 2014}{Implementation of the iteam.org website}{}
-\mycvitemwithcomment{Summer 2014}{Participation in the open source project Zeste de Savoir}{}
+\mycvitemwithcomment{Summer 2014}{Development of iteam.org website}{}
+\mycvitemwithcomment{Summer 2014}{Involment in the french open source project Zeste de Savoir}{}
 \mycvitemwithcomment{June 2014}{Internship (computers repairing) at Computer Aid International (London)}{}
 
 
