--- a/fr/CV_fr.tex
+++ b/fr/CV_fr.tex
@@ -2,7 +2,7 @@
 \documentclass[11pt, a4paper]{moderncv}
 
 \usepackage[utf8]{inputenc}
-\usepackage[scale=0.8]{geometry}
+\usepackage[scale=0.85]{geometry}
 
 \moderncvstyle{classic}
 \moderncvcolor{blue}
@@ -18,7 +18,7 @@
 \firstname{Adrien}
 \familyname{CHARDON}
 
-\title{Étudiant ingénieur et passionné d'open source \newline Disponible de juin à août 2016}
+\title{Étudiant ingénieur et passionné d'open source \newline Disponible de juillet à août 2016}
 \address{197 av. Achille Peretti}{92 200, Neuilly-sur-Seine - France}
 \mobile{+33 6 88 61 25 80}
 \email{adrienchardon@mailoo.org}
@@ -35,10 +35,11 @@
 \mysection{Expérience}
 %------------------------------------------------------------------------------
 
-\mycvitemwithcomment{Été 2015}{Stage chez Findspire (Paris)}{}
-\mycvitemwithcomment{Été 2014}{Réalisation du site associatif iteam.org}{}
+\mycvitemwithcomment{Depuis septembre 2014}{Administration des serveurs de l'iTeam}{(Association de promotion du logiciel libre à l'ECE Paris)}
+\mycvitemwithcomment{Automne 2015}{Job étudiant à l'université d'Aalborg (Danemark)}{Développement autour de l'Oculus Rift}
+\mycvitemwithcomment{Juin à Août 2015}{Stage développeur chez Findspire (Paris)}{}
+\mycvitemwithcomment{Été 2014}{Réalisation du site web associatif iteam.org}{}
 \mycvitemwithcomment{Été 2014}{Contribution au projet open-source Zeste de Savoir}{}
-\mycvitemwithcomment{depuis septembre 2014}{Administration des serveurs de l'iTeam}{(Association de promotion du logiciel libre à l'ECE Paris)}
 \mycvitemwithcomment{Juin 2014}{Stage ouvrier (réparation d'ordinateurs) chez Computer Aid International (Londres)}{}
 
 %\cvitem{Mon github}{Skill level.}
@@ -46,17 +47,14 @@
 \mysection{Compétences informatiques}
 %------------------------------------------------------------------------------
 
-\subsection{Développement}
-\mycvitemwithcomment{Programmation}{C, Python}{}
-\mycvitemwithcomment{Web - Backend}{Python avec son framework web Django}{}
-\mycvitemwithcomment{Web - Frontend}{HTML, CSS (framework Foundation), Javascript (JQuery)}{}
-\mycvitemwithcomment{}{Notions : base de données, assembleur x86, PHP}{}
-\mycvitemwithcomment{Écosystème UNIX}{Bash, vim, git, ...}{}
-
-\subsection{Outils bureautiques}
+\mycvitemwithcomment{Programmation}{C}{Bas niveau (sockets, threads), SDL, ...}
+\mycvitemwithcomment{}{Python}{Django, Scipy, requests, ...}
+\mycvitemwithcomment{}{Assembleur x86}{Reverse engineering et étude des systèmes d'exploitation.}
+\mycvitemwithcomment{Web - Backend}{Python (framework Django)}{}
+\mycvitemwithcomment{Web - Frontend}{HTML, CSS/SCSS (framework Foundation), Javascript (JQuery)}{}
+\mycvitemwithcomment{Écosystème UNIX}{Vim, git, scripts bash, ...}{}
+\mycvitemwithcomment{Administration système}{Linux (Debian / Ubuntu)}{Expérience : $\sim$6 serveurs de l'iTeam.}
 \mycvitemwithcomment{Traitement de texte}{\LaTeX}{}
-\cvitem{Systèmes d'exploitation}{Linux (Debian), Windows}
-
 
 \mysection{Formation}
 %------------------------------------------------------------------------------
