--- a/en/CV_en.tex
+++ b/en/CV_en.tex
@@ -51,8 +51,8 @@
 
 \mycvitemwithcomment{Programming skills}{C}{Low level (sockets, threads), SDL, ...}
 \mycvitemwithcomment{}{Python}{Django, Scipy, requests, ...}
-\mycvitemwithcomment{}{x86 assembly}{Reverse engineering and operating systems study.}
-\mycvitemwithcomment{Web - Backend}{Python (Django framework)}{}
+\mycvitemwithcomment{}{Asm x86}{Reverse engineering and operating systems study.}
+\mycvitemwithcomment{Web - Backend}{Python (Django and Flask frameworks)}{}
 \mycvitemwithcomment{Web - Frontend}{HTML, CSS/SCSS (Foundation framework), Javascript (JQuery)}{}
 \mycvitemwithcomment{UNIX ecosystem}{Vim, git, bash scripts, ...}{}
 \mycvitemwithcomment{System administration}{Linux (Debian / Ubuntu)}{}
