--- a/fr/CV_fr.tex
+++ b/fr/CV_fr.tex
@@ -49,11 +49,11 @@
 
 \mycvitemwithcomment{Programmation}{C}{Bas niveau (sockets, threads), SDL, ...}
 \mycvitemwithcomment{}{Python}{Django, Scipy, requests, ...}
-\mycvitemwithcomment{}{Assembleur x86}{Reverse engineering et étude des systèmes d'exploitation.}
-\mycvitemwithcomment{Web - Backend}{Python (framework Django)}{}
+\mycvitemwithcomment{}{Asm x86}{Reverse engineering de binaires et conception des systèmes d'exploitation.}
+\mycvitemwithcomment{Web - Backend}{Python (frameworks Django et Flask)}{}
 \mycvitemwithcomment{Web - Frontend}{HTML, CSS/SCSS (framework Foundation), Javascript (JQuery)}{}
 \mycvitemwithcomment{Écosystème UNIX}{Vim, git, scripts bash, ...}{}
-\mycvitemwithcomment{Administration système}{Linux (Debian / Ubuntu)}{Expérience : $\sim$6 serveurs de l'iTeam.}
+\mycvitemwithcomment{Administration système}{Linux (Debian / Ubuntu)}{Expérience : Administration des serveurs de l'iTeam.}
 \mycvitemwithcomment{Traitement de texte}{\LaTeX}{}
 
 \mysection{Formation}
