--- a/fr.tex
+++ b/fr.tex
@@ -2,15 +2,28 @@
 \documentclass[11pt, a4paper]{moderncv}
 
 \usepackage[utf8]{inputenc}
-\usepackage[scale=0.85]{geometry}
+\usepackage[scale=0.87]{geometry}
+\usepackage[yyyymmdd]{datetime}
+\usepackage[pscoord]{eso-pic}
 
 \moderncvstyle{classic}
 \moderncvcolor{blue}
 \nopagenumbers{}
 \setlength{\hintscolumnwidth}{40mm}
+\renewcommand{\dateseparator}{--}
 
 \newcommand{\mycvitemwithcomment}[3]{\cvitemwithcomment{#1}{\textnormal{#2}}{#3}}
 \newcommand{\mysection}[1]{\section{\textbf{#1}}}
+\newcommand{\placetextbox}[3]{% \placetextbox{<horizontal pos>}{<vertical pos>}{<stuff>}
+  \setbox0=\hbox{#3}% Put <stuff> in a box
+  \AddToShipoutPictureFG*{% Add <stuff> to current page foreground
+    \put(
+        \LenToUnit{#1\paperwidth},\LenToUnit{#2\paperheight}
+    ){
+        \vtop{{\null}\makebox[0pt][c]{\rotatebox[origin=c]{90}{#3}}}
+    }%
+  }%
+}%
 
 
 % Personal data
@@ -18,13 +31,13 @@
 \firstname{Adrien}
 \familyname{CHARDON}
 
-\title{Étudiant ingénieur et passionné d'open source \newline Disponible de juillet à août 2016}
-\address{197 av. Achille Peretti}{92 200, Neuilly-sur-Seine - France}
+\title{Étudiant ingénieur et devops passionné d'open source \newline Disponible d'avril à août 2017}
+\address{197 avenue Achille Peretti}{92200, Neuilly-sur-Seine - France}
 \mobile{+33 6 88 61 25 80}
 \email{adrienchardon@mailoo.org}
-\homepage{www.github.com/Nodraak}
+\homepage{nodraak.fr}
+\social[github]{github.com/Nodraak}
 \extrainfo{Né le 30 janvier 1995}
-
 
 % Content
 %------------------------------------------------------------------------------
@@ -32,36 +45,45 @@
 
 \makecvtitle
 
+\vspace{-12mm}
 \mysection{Expérience}
 %------------------------------------------------------------------------------
 
-\mycvitemwithcomment{Depuis septembre 2014}{Administration des serveurs de l'iTeam}{(Association de promotion du logiciel libre à l'ECE Paris)}
-\mycvitemwithcomment{Automne 2015}{Job étudiant à l'université d'Aalborg (Danemark)}{Développement autour de l'Oculus Rift}
-\mycvitemwithcomment{Juin à Août 2015}{Stage développeur chez Findspire (Paris)}{}
+\mycvitemwithcomment{2016-2017 \\ \textit{Mandat en cours}}{Président de l'iTeam (association étudiante de promotion du logiciel libre à \\ l'ECE Paris) : coordination des 7 administrateurs dans un contexte de \\ gestion associative}{}
+\mycvitemwithcomment{Juillet et août 2016}{Stage chez Pulsit (startup incubée à Polytechnique)}{Prototypage autour d'Arduino.}
+\mycvitemwithcomment{Automne 2015}{Job étudiant à l'université d'Aalborg (Danemark)}{Développement autour de l'Oculus Rift.}
+\mycvitemwithcomment{Juin à août 2015}{Stage développeur chez Findspire (Paris)}{}
+\mycvitemwithcomment{Depuis septembre 2014}{Administration des serveurs de l'iTeam}{}
 \mycvitemwithcomment{Été 2014}{Réalisation du site web associatif iteam.org}{}
-\mycvitemwithcomment{Été 2014}{Contribution au projet open-source Zeste de Savoir}{}
-\mycvitemwithcomment{Juin 2014}{Stage ouvrier (réparation d'ordinateurs) chez Computer Aid International (Londres)}{}
+\mycvitemwithcomment{Été 2014}{Contribution au projet open-source \textit{Zeste de Savoir}}{}
+\mycvitemwithcomment{Juin 2014}{Stage ouvrier chez Computer Aid International (Londres)}{}
 
 %\cvitem{Mon github}{Skill level.}
 
-\mysection{Compétences informatiques}
+\mysection{Compétences techniques}
 %------------------------------------------------------------------------------
 
-\mycvitemwithcomment{Programmation}{C}{Bas niveau (sockets, threads), SDL, ...}
-\mycvitemwithcomment{}{Python}{Django, Scipy, requests, ...}
+% todo
+% intelligence artificielle (reseau de neuronnes avec tensorflow)
+% traitement d'images (opencv)
+% virtualisation (docker)
+% open source: pdp, zds, munin, doc_python_fr, classrooms
+\mycvitemwithcomment{Programmation}{C}{Bas niveau (sockets, threads), GUI (SDL).}
+\mycvitemwithcomment{}{Python}{Django, Scipy, requests, OpenCV, Tensorflow.}
 \mycvitemwithcomment{}{Asm x86}{Reverse engineering de binaires et conception des systèmes d'exploitation.}
 \mycvitemwithcomment{Web - Backend}{Python (frameworks Django et Flask)}{}
 \mycvitemwithcomment{Web - Frontend}{HTML, CSS/SCSS (framework Foundation), Javascript (JQuery)}{}
-\mycvitemwithcomment{Écosystème UNIX}{Vim, git, scripts bash, ...}{}
-\mycvitemwithcomment{Administration système}{Linux (Debian / Ubuntu)}{Expérience : Administration des serveurs de l'iTeam.}
+\mycvitemwithcomment{Écosystème UNIX}{Vim, Git, scripts Bash}{}
+\mycvitemwithcomment{Administration système}{Linux (Ubuntu et Debian)}{Expérience : administration des serveurs de l'iTeam.}
+\mycvitemwithcomment{Microcontrolleurs}{AVR (Arduino), PIC (Microchip), ARM (STM32)}{}
 \mycvitemwithcomment{Traitement de texte}{\LaTeX}{}
 
 \mysection{Formation}
 %------------------------------------------------------------------------------
 
 \subsection{Diplômes et études}
-\cventry{2015 - 2016 \\ \textit{En cours d'obtention}}{Bachelor of Science en électronique}{}{}{}{Université d'Aalborg, département d'électronique - Aalborg, Danemark}
-\cventry{2013 - 2018 \\ \textit{En cours d'obtention}}{Diplôme d'ingénieur}{}{}{}{ECE Paris école d'ingénieurs - Paris, France}
+\cventry{2015 - 2016}{Bachelor of Science en électronique}{}{}{}{Université d'Aalborg, département d'électronique - Aalborg, Danemark}
+\cventry{2013 - 2018 \\ \textit{En cours d'obtention}}{Diplôme d'ingénieur, majeure systèmes embarqués}{}{}{}{ECE Paris école d'ingénieurs - Paris, France}
 %\cventry{Août 2013}{Concours d'entrée de l'école 42 réussi}{}{}{}{École 42 - Paris, France}
 \cventry{2013}{Baccalauréat}{Série scientifique, spécialité mathématiques}{}{}{Lycée St Dominique - Neuilly-sur-Seine, France}{}
 
@@ -78,5 +100,7 @@
 %\cvitem{Scoutisme}{Neuf ans en tant que scout et actuellement adjoint au chef de Troupe (encadrement de 20 jeunes de 12 à 17 ans).}
 % roller
 % elec, cubesat, impression 3d
+
+\placetextbox{0.05}{0.08}{\tiny{\today}}
 
 \end{document}
